# open-skills

./: .gitignore  HANDOFF.md  PRD-open-skills-recommendation-and-install.md  README.md  SPEC.md  core.py  mcp_server.py  openskills.py  pyproject.toml  server.py
.open-skills/runbooks/: release-day.md
.open-skills/skills/pending-review/ai-chat-frontend-design/: skill.md
.open-skills/skills/pending-review/implement-nothing-ui-frontend/: skill.md
.open-skills/skills/test-skill/: skill.md
docs/: index.html
graphify-out/: .graphify_chunk_01.json  .graphify_python  .manifest.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
support-billing-recovery/: SKILL.md  manifest.yaml
support-billing-recovery/adapters/: claude-code.md  codex.md  cursor.mdc  hermes.md
support-billing-recovery/adapters/hermes/tests/: test_basic.py
support-billing-recovery/tests/: test_basic.py
tests/: test_core.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts
web/src/components/: FileTree.tsx  FrontmatterForm.tsx  Layout.tsx  RunbookTracker.tsx  SkillList.tsx  Toast.tsx  ValidationPanel.tsx
web/src/pages/: AgentSetupPage.tsx  ExtractPage.tsx  RecommendPage.tsx  RunbooksPage.tsx  SkillDetailPage.tsx  SkillsPage.tsx  UsagePage.tsx
