[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "openskills"
version = "2.0.0"
description = "Portable agent skills — CLI and MCP server"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]

[project.scripts]
openskills = "openskills:main"
